2008-08-2  Sanel <karijes@users.sourceforge.net>

	* Added file_executable with tests
	* EdbusConnection.cpp some debug output got newlines
	* Changed way register_object() in EdbusConnection behaves; now if none
	object was registered, all data can be listened; otherwise only for that
	object
	* TODO entry
	* Better matching interface for signals and method in EdbusConnection,
	hopefully

2008-07-29  Sanel <karijes@users.sourceforge.net>

	* Added test/perf/stringtok.ss as comparison against chicken scheme
	compiler

2008-07-14  Sanel <karijes@users.sourceforge.net>

	* Removed edelib-dbus-xml2cpp
	* Made edelib-dbus-introspect compileable

2008-06-16  Sanel <karijes@users.sourceforge.net>

	* Fixed a typo with __EDBUSMESSAGE_H__ in EdbusMessage.h

2008-06-04  Sanel <karijes@users.sourceforge.net>

	* Fixed bool value checks in Config class (thanks to Vedran note)
	* Added that to tests too

2008-05-10  Sanel <karijes@users.sourceforge.net>
	
	* Forgot to update Jamrule and it's MakeTest for dbus usage via 
	"use-dbus" flag

2008-04-5  Sanel <karijes@users.sourceforge.net>

	* Fixed assertion check in is_double() in EdbusData
	* Fixed remove_all() in EdbusList
	* Test for dbus code. Not completed....

2008-03-25  Sanel <karijes@users.sourceforge.net>

	* Let 'jam distclean' clean Doxyfile too

2008-03-24  Sanel <karijes@users.sourceforge.net>

	* Rewamped build stuff. Now shared library is build via libtool
	* EdbusConnection.h and EdbusObjecPath.h docs todo

2008-03-17  Sanel <karijes@users.sourceforge.net>

	* Removed tests for STL
	* Improved edelib-config
	* Added FLTKLIBS and FLTKLIBS_FULL expansions
	* Added dbus flags and libs expansions
	* Merged dbus code into edelib
	* Doing some grouping with documentation; things are becommimng messy

2008-03-13  Sanel <karijes@users.sourceforge.net>

	* Added == and != opeators in list with tests
	* Added const_iterator in list. Changed DesktopFile.cpp to reflect that
	too
